--- a/config/tri_api.ini
+++ b/config/tri_api.ini
@@ -2,7 +2,7 @@
 master = true
 processes = 5
 threads = 2
-virtualenv = /srv/api/env
+virtualenv = /srv/pythonenv
 #home = /srv/api/
 socket = 127.0.0.1:3031
 module = server
