--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiodns==1.1.1
 aiohttp==1.0.5
 async-timeout==1.1.0
 blinker==1.4
-CacheControl==0.12.0
+-e git+git://github.com/jowrjowr/cachecontrol.git
 chardet==2.3.0
 click==6.7
 command-not-found==0.3
