--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ async-generator==1.10
 async-timeout==2.0.1
 atomicwrites==1.1.5
 attrs==18.1.0
-Authlib==0.9
 Babel==2.6.0
 backports.functools-lru-cache==1.5
 beautifulsoup4==4.6.3
@@ -30,9 +29,11 @@ discord==0.0.2
 discord.py==0.16.12
 dnspython==1.15.0
 docutils==0.14
+ecdsa==0.13
 Flask==1.0.2
 Flask-Login==0.4.1
 Flask-Scss==0.5
+future==0.16.0
 graphitesend==0.10.0
 httpcache==0.1.3
 httplib2==0.11.3
@@ -79,6 +80,7 @@ pycares==2.3.0
 pycparser==2.18
 pycrypto==2.6.1
 Pygments==2.2.0
+PyJWT==1.6.4
 pyldap==3.0.0.post1
 PyMySQL==0.9.2
 pyOpenSSL==18.0.0
@@ -90,6 +92,7 @@ python-dateutil==2.7.3
 python-debian==0.1.32
 python-geoip==1.2
 python-geoip-geolite2==2015.303
+python-jose==3.0.0
 python-ldap==3.1.0
 python-simplexml==0.1.5
 python-systemd==0.0.9
